--- a/modules/practical_openscap_basics.adoc
+++ b/modules/practical_openscap_basics.adoc
@@ -26,7 +26,7 @@ Red Hat Enterprise Linux - cpe:/o:redhat:enterprise_linux
 Red Hat Enterprise Linux 5 - cpe:/o:redhat:enterprise_linux:5
 Red Hat Enterprise Linux 6 - cpe:/o:redhat:enterprise_linux:6
 Red Hat Enterprise Linux 7 - cpe:/o:redhat:enterprise_linux:7
-…
+...
 ==== Supported OVAL objects and associated OpenSCAP probes ====
 OVAL family   OVAL object                  OpenSCAP probe
 ----------    ----------                   ----------
@@ -69,7 +69,7 @@ unix          symlink                      probe_symlink
 
 The oscap -V command is great for reviewing what specifications versions, builtin CPE names (Common Platform Enumeration - essentially standardized platform IDs), supported OVAL objects and associated OpenSCAP probes are installed.
 
-Let us move onto more productive uses of the command-line interface. The OpenSCAP CLI is split into sub-modules and each performs a very specialized task. E.g.: the “info” sub-module can be used to examine SCAP related files.
+Let us move onto more productive uses of the command-line interface. The OpenSCAP CLI is split into sub-modules and each performs a very specialized task. E.g.: the "info" sub-module can be used to examine SCAP related files.
 
 Locate the SCAP content installed on the system from the SCAP Security Guide package:
 ```
@@ -101,7 +101,7 @@ Locate the SCAP content installed on the system from the SCAP Security Guide pac
 /usr/share/xml/scap/ssg/content/ssg-rhel7-xccdf.xml
 ```
 
-Let us run the “oscap info” command on the RHEL7 SCAP datastream file - ssg-rhel7-ds.xml:
+Let us run the `oscap info` command on the RHEL7 SCAP datastream file - ssg-rhel7-ds.xml:
 
 ```
 [workshop@serverX ~]$ oscap info /usr/share/xml/scap/ssg/content/ssg-rhel7-ds.xml
@@ -177,9 +177,8 @@ Example of a profile is the Certified Cloud Providers (CCP). We will use this pr
 
 ```
 Profiles:
-…
+...
 Title: Red Hat Corporate Profile for Certified Cloud Providers (RH CCP)
 Id: xccdf_org.ssgproject.content_profile_rht-ccp
-…
+...
 ```
-
