fix ascii error

--- a/modules/practical_openscap_remediation.adoc
+++ b/modules/practical_openscap_remediation.adoc
@@ -33,7 +33,7 @@ To generate fixes based on a TestResult XCCDF file, we need to know the result-i
 
 ```
 [workshop@serverX ~]$ oscap info xccdf-results.xml | grep "Result ID"
-Result ID: xccdf_org…ssgproject.content_profile_rht-ccp
+Result ID: xccdf_org.ssgproject.content_profile_rht-ccp
 ```
 
 ===  Profile-based remediation
